force-app/main/default/objects/FinancialAccount__c/FinancialAccount__c.object-meta.xml
<CustomObject>
    <label>FinancialAccount</label>
    <nameField>
        <label>Financial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FinancialAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>