force-app/main/default/objects/FinancialAccount__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Financial_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>