force-app/main/default/objects/FinancialAccount__c/fields/ApprovedCreditLine__c.field-meta.xml
<CustomField>
    <fullName>ApprovedCreditLine__c</fullName>
    <label>ApprovedCreditLine</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>