force-app/main/default/objects/FinancialAccount__c/fields/CardNumber__c.field-meta.xml
<CustomField>
    <fullName>CardNumber__c</fullName>
    <label>CardNumber</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>