force-app/main/default/objects/FinancialAccount__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <label>CardType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_NovaBank</valueSetName>
    </valueSet>
</CustomField>