force-app/main/default/objects/FinancialAccount__c/fields/IssuanceDate__c.field-meta.xml
<CustomField>
    <fullName>IssuanceDate__c</fullName>
    <label>IssuanceDate</label>
    <type>Date</type>
</CustomField>