force-app/main/default/objects/FinancialAccount__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Financial_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>