force-app/main/default/objects/FinancialAccount__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductId</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>